objects/QuotationInformation__c.object
<CustomObject>
    <fields>
        <fullName>SubtotalReductionName1__c</fullName>
        <label>値引1後合計ラベル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubtotalReductionName2__c</fullName>
        <label>値引2後合計ラベル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupervisorName__c</fullName>
        <label>責任者氏名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupervisorPosition__c</fullName>
        <label>責任者役職</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxExemptionTextOutput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>非課税文言表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>税率</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TotalAmountName__c</fullName>
        <defaultValue>&apos;合計&apos;</defaultValue>
        <label>合計金額ラベル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>合計金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTaxAmountName__c</fullName>
        <defaultValue>&apos;総合計&apos;</defaultValue>
        <label>総合計金額ラベル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalTaxAmount__c</fullName>
        <label>総合計金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitBodyKikaku__c</fullName>
        <label>本体号機・規格</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <label>本体号機</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitbodyExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>本体号機出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpdateType__c</fullName>
        <description>Indicates where the modification comes from and is reset to NULL in a before upsert trigger. 
1: Modified by the webmethod between BaaN and SFDC</description>
        <label>UpdateType</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isDisplayDecimal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gets its value from UserSetting__c&apos;s IsD</description>
        <label>整数表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <label>見積書情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>QuoteNo__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>SalesPerson__c</columns>
        <columns>SalesAssistant__c</columns>
        <columns>OrgName__c</columns>
        <columns>ContractAccount__c</columns>
        <columns>Series__c</columns>
        <columns>QuoteNo_BranchNo_Sync__c</columns>
        <columns>RegisterDate__c</columns>
        <columns>ContractCode__c</columns>
        <columns>IssueDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>NM</value>
        </filters>
        <filters>
            <field>QuotationType__c</field>
            <operation>notEqual</operation>
            <value>B01,B09,A01</value>
        </filters>
        <filters>
            <field>IssueDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2016</value>
        </filters>
        <label>ＮＭ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>QuoteNo_BranchNo_Sync__c</columns>
        <columns>QuoteNo__c</columns>
        <columns>QuotationRequestedDate__c</columns>
        <columns>SalesPerson__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ContractAccount__c</columns>
        <columns>ShipmentAccount__c</columns>
        <columns>Series__c</columns>
        <columns>QuotationTypeText__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>TotalAmount__c</columns>
        <columns>TotalTaxAmount__c</columns>
        <columns>Memo__c</columns>
        <filterScope>Everything</filterScope>
        <label>EQ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>View2</fullName>
        <columns>QuoteNo__c</columns>
        <columns>Series__c</columns>
        <columns>SalesArea__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>SalesPerson__c</columns>
        <columns>OrgName__c</columns>
        <columns>ContractAccount__c</columns>
        <columns>QuoteNo_BranchNo_Sync__c</columns>
        <columns>RegisterDate__c</columns>
        <columns>ContractCode__c</columns>
        <columns>IssueDate__c</columns>
        <columns>SalesOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteNo__c</field>
            <operation>contains</operation>
            <value>J</value>
        </filters>
        <label>全て</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X171</fullName>
        <columns>QuoteNo__c</columns>
        <columns>BranchNo__c</columns>
        <columns>Series__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SalesPerson__c</columns>
        <columns>ContractName__c</columns>
        <columns>ShipmentName__c</columns>
        <columns>NAME</columns>
        <columns>TotalAmount__c</columns>
        <columns>QuotationTypeText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SalesArea__c</field>
            <operation>equals</operation>
            <value>広島支店</value>
        </filters>
        <filters>
            <field>CreatedDateFormula__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2017</value>
        </filters>
        <filters>
            <field>SalesPerson__c</field>
            <operation>contains</operation>
            <value>髙坂,塚本</value>
        </filters>
        <label>広島支店 17年度</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X172</fullName>
        <columns>QuoteNo__c</columns>
        <columns>BranchNo__c</columns>
        <columns>Series__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SalesPerson__c</columns>
        <columns>ContractName__c</columns>
        <columns>ShipmentName__c</columns>
        <columns>NAME</columns>
        <columns>TotalAmount__c</columns>
        <columns>QuotationTypeText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SalesArea__c</field>
            <operation>equals</operation>
            <value>広島支店</value>
        </filters>
        <filters>
            <field>CreatedDateFormula__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2017</value>
        </filters>
        <filters>
            <field>QuoteNo__c</field>
            <operation>contains</operation>
            <value>1016</value>
        </filters>
        <filters>
            <field>QuotationType__c</field>
            <operation>equals</operation>
            <value>B16</value>
        </filters>
        <filters>
            <field>SalesPerson__c</field>
            <operation>notContain</operation>
            <value>屋敷</value>
        </filters>
        <label>広島支店 17年度(受託)</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>見積名称</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>BaaN</fullName>
        <active>true</active>
        <description>Quotation created in BaaN</description>
        <label>BaaN</label>
    </recordTypes>
    <recordTypes>
        <fullName>PCS</fullName>
        <active>true</active>
        <description>Quotation created directly in SFDC</description>
        <label>PCS</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFDC</fullName>
        <active>true</active>
        <description>Quotation created directly in SFDC</description>
        <label>SFDC</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>BumonRoleSharing__c</fullName>
        <label>部門のロールへの共有</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Geographic__c</fullName>
        <label>Geographic</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>KeiretsuRoleSharing__c</fullName>
        <label>系列のロールへの共有</label>
    </sharingReasons>
</CustomObject>